--- a/Watchlist/app/build.gradle
+++ b/Watchlist/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     implementation "androidx.room:room-runtime:2.4.3"
     annotationProcessor "androidx.room:room-compiler:2.4.3"
 
-    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 }
